k8s/api-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    app: ingress-project
spec:
  ports:
    - port: 8080
  selector:
    app: ingress-project
    tier: api
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-app
  labels:
    app: ingress-project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingress-project
      tier: api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ingress-project
        tier: api
    spec:
      containers:
      - image: moonsungkim/backend
        name: api-app
        ports:
        - containerPort: 8080
          name: api-app
        volumeMounts:
        - name: api-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: api-persistent-storage
        persistentVolumeClaim:
          claimName: pv-claim
