k8s/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: ingress-project
spec:
  ports:
    - port: 3306
  selector:
    app: ingress-project
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
  labels:
    app: ingress-project
spec:
  selector:
    matchLabels:
      app: ingress-project
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ingress-project
        tier: mysql
    spec:
      containers:
      - image: arm64v8/mysql
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: pv-claim
